# configures_vscode

./: README.md  settings.json
CMake/: CMakeLists.txt
CMake/app_simple/: CMakeLists.txt
clang_format/: clang-format
i3wm/: config  i3status.conf
vim/: vimrc
